# Byparr

./: .gitignore  AGENTS.md  Dockerfile  README.md  cmd.sh  compose.yaml  docker-compose.yaml  entrypoint.sh  fix_nodriver.py  flake.nix  github_actions_fix.sh  image-fetcher.mjs  main.py  novnc.sh  pyproject.toml  pytest.sh  renovate.json  run_vnc.sh  shell.nix  test.sh  update_python_action.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yaml
.github/workflows/: claude-code-review.yml  docker-cleanup.yml  docker-publish.yml
extentions/I-Still-Dont-Care-About-Cookies/_metadata/generated_indexed_rulesets/: _ruleset1
extentions/I-Still-Dont-Care-About-Cookies/data/: background.js
extentions/uBOL-home/_metadata/generated_indexed_rulesets/: _ruleset10  _ruleset11  _ruleset12  _ruleset13  _ruleset14  _ruleset15  _ruleset16  _ruleset17  _ruleset18  _ruleset19  _ruleset2  _ruleset20  _ruleset21  _ruleset22  _ruleset23  _ruleset24  _ruleset25  _ruleset26  _ruleset27  _ruleset28  _ruleset29  _ruleset3  _ruleset30  _ruleset31  _ruleset32  _ruleset33  _ruleset34  _ruleset35  _ruleset36  _ruleset37  _ruleset38  _ruleset39  _ruleset4  _ruleset40  _ruleset41  _ruleset42  _ruleset43  _ruleset5  _ruleset6  _ruleset7  (+2 more)
extentions/uBOL-home/js/: background.js  ext.js  mode-manager.js  popup.js  ruleset-manager.js  scripting-manager.js  settings.js
extentions/uBOL-home/rulesets/main/: stevenblack-hosts.json
extentions/uBOL-home/rulesets/scripting/procedural/: default.js
extentions/uBOL-home/rulesets/scripting/scriptlet/: default.remove-node-text.js
src/: consts.py  endpoints.py  middlewares.py  models.py  owui.py  proxy_endpoints.py  utils.py
src/models/: github.py  requests.py
src/utils/: __init__.py  browser.py  consts.py  extensions.py  extentions.py  misc.py  utils.py
tests/: main_test.py  owui_test.py
