# cspell:disable
[project]
authors = [{ name = "ThePhaseless", email = "kukubaorch@gmail.com" }]
license = { text = "LICENSE" }
requires-python = "<4.0,>=3.12"
name = "Byparr"
version = "0.1.0"
description = "API for getting cookies for Cloudflare challenges"
readme = "README.md"
dependencies = [
    "fastapi[standard]==0.116.1",
    "pyautogui==0.9.54",
    "pydantic==2.11.7",
    "seleniumbase==4.40.7",
    "uvicorn==0.35.0",
]
urls = { repository = "https://github.com/ThePhaseless/Byparr" }

[dependency-groups]
test = [
    "httpx==0.28.1",
    "pytest-asyncio==1.1.0",
    "pytest-progress==1.3.0",
    "pytest-retry==1.7.0",
]
dev = ["deptry==0.23.1", "ruff==0.12.7"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pyautogui"]

[tool.ruff.lint]
ignore = [
    "D203",
    "D212",
    "D100",
    "D400",
    "EM101",
    "S101",
    "D104",
    "ANN201",
    "TD003",
    "PLR0913",
    "ERA001",
    "COM812",
    "ISC001",
    "TC003",
    "TC002",
    "TC001",
    "TD002",
    "E501",
    "D101",
    "G004",
    "ANN001",
    "ANN204",
    "ANN206",
]
select = ["ALL"]
extend-safe-fixes = ["D415"]

[tool.pytest]
log_cli = "True"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
