# cspell:disable
[project]
authors = [{ name = "ThePhaseless", email = "kukubaorch@gmail.com" }]
license = { text = "LICENSE" }
requires-python = "<4.0,>=3.12"
name = "Byparr"
version = "0.1.0"
description = "API for getting cookies for Cloudflare challenges"
readme = "README.md"
dependencies = [
    "camoufox[geoip]==0.4.*",
    "fastapi[standard]==0.116.*",
    "playwright-captcha==0.1.*",
    "pydantic==2.11.*",
]
urls = { repository = "https://github.com/ThePhaseless/Byparr" }

[dependency-groups]
test = [
    "httpx==0.28.*",
    "pytest==8.4.*",
    "pytest-asyncio==1.1.*",
    "pytest-progress==1.3.*",
    "pytest-retry==1.7.*",
    "pytest-xdist==3.8.*",
    "setuptools==80.9.*",
]
dev = ["deptry==0.23.1", "ruff==0.12.7"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pyautogui"]

[tool.ruff.lint]
ignore = [
    "D203",
    "D212",
    "D100",
    "D400",
    "EM101",
    "S101",
    "D104",
    "ANN201",
    "TD003",
    "PLR0913",
    "ERA001",
    "COM812",
    "ISC001",
    "TC003",
    "TC002",
    "TC001",
    "TD002",
    "E501",
    "D101",
    "G004",
    "ANN001",
    "ANN204",
    "ANN206",
]
select = ["ALL"]
extend-safe-fixes = ["D415"]

[tool.pyright]
reportMissingTypeStubs = false
